Se agrega primera seccion

--- a/index.html
+++ b/index.html
@@ -34,16 +34,22 @@
         <div class="row">
             <div id="hero-text" class="col-12 col-sm-6 d-flex flex-column justify-content-center align-items-center">
                 <h1 class="text-center font-weight-bold">Ignacio Napal</h1>
-                <h2 class="text-center font-weight-normal mt-4">Full Stack Developer</h2>
-                <h4><span class="text-warning" id="java">Java</span> & <span class="text-primary">React</span></h4>
+                <h2 class="text-center font-weight-normal mt-4 fs-5">Full Stack Developer</h2>
+                <h4 class="fs-5"><span class="text-warning">Java</span> & <span class="text-primary">React</span>
+                </h4>
             </div>
             <div class="col-6 d-none d-sm-block hero-image">
             </div>
             <div class="col-12 d-sm-none hero-image">
-
             </div>
         </div>
-
+    </div>
+    <div class="container">
+        <div class="row mt-4">
+            <div class="col-6">
+                <h3>About</h3>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
