Se avanza con estructura y estilos de seccion skills

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                     </div>
                     <div class="row align-items-center">
                         <div class="col-1 d-none d-md-inline">
-                            <span>JULY 2021</span>
+                            <span><strong>JULY 2021</strong></span>
                         </div>
                         <div class="col-11">
-                            <ul>
+                            <ul class="ps-0">
                                 <li>Development and maintenance of screens
                                     according to the client's needs, with JSP, HTML and
                                     CSS.</li>
@@ -94,18 +94,61 @@
         </div>
         <div id="skills" class="row mt-4">
             <div class="col-12">
-                <h3>Skills</h3>
-                <ul>
-                    <li>JS | React</li>
-                    <li>Java | C# | Node</li>
-                    <li>HTML | CSS | Bootstrap | JSP</li>
-                    <li>SQL SERVER | Mongo DB</li>
-                    <li>Git</li>
-                    <li><strong>English B1 | Native Spanish</strong></li>
-                </ul>
+                <h3 title="skills">Skills</h3>
+                <div class="row mt-4">
+                    <div class="col-6 col-md-3">
+                        <i title="javascript icon" class="fa-brands fa-js-square"></i>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <i title="react icon" class="fa-brands fa-react"></i>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <i title="HTML 5 icon" class="fa-brands fa-html5"></i>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <i title="CSS 3 icon" class="fa-brands fa-css3"></i>
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-6 col-md-3">
+                        <i title="Bootstrap icon" class="fa-brands fa-bootstrap"></i>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <i>JSP</i>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <i title="Java icon" class="fa-brands fa-java"></i>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <i title="C sharp">C#</i>
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-6 col-md-3">
+                        <i title="node js icon" class="fa-brands fa-node-js"></i>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <i title="sql server icon" class=" fa-solid fa-database fs-6"> SQL Server</i>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <i title="git icon" class="fa-brands fa-git-square"></i>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <i title="mongo db icon" class="fa-solid fa-database fs-6"> Mongo Db</i>
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <h5>Languages</h6>
+                        <div class="col-12">
+                            <p class="fs-6 d-inline me-4"><img src="/assets/img/united-states.png" alt="argentina flag">
+                                B1</p>
+                            <p class="fs-6 d-inline"><img src="/assets/img/argentina.png" alt="united states flag">
+                                NATIVE</p>
+                        </div>
+                </div>
             </div>
         </div>
-        <div id="contact" class="row">
+        <div id="contact" class="row mt-4">
             <h3>Contact</h3>
             <form novalidate class="needs-validation">
                 <div class="form-row align-items-center justify-content-center mt-2">
@@ -196,6 +239,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/5742e26460.js" crossorigin="anonymous"></script>
     <script src="/index.js"></script>
 </body>
 
